# BRFMLive

./: .replit  AUTOMATED_TEST_REPORT_FINAL.md  CORS_SOLUTION.md  SUPPLIER_MANAGEMENT_TEST_REPORT.md  TEST_REPORT_NOTIFICATION_SYSTEM.md  TEST_USERS.md  database_backup.json  database_backup.sql  init_local_db.sh  package-lock.json  package.json  pyproject.toml  replit.md  requirements.txt  setup_database.py  setup_database.sql  setup_new_clone.sh  test_dispatch.py
attached_assets/: Pasted--12-Hour-Transfer-Process-Production-Next-Step-Overview_1766468211896.txt  Pasted--CORE-BACKEND-PROBLEMS-Dispatch-Module-Problem-1-quanti_1769595120098.txt  Pasted--CREATE-TABLE-finished-goods-godown-master-id-SERIAL-PR_1770099629045.txt  Pasted--Exception-Group-Traceback-most-recent-call-last-File-opt-render-project-src-venv-lib-p-1763612626759_1763612626760.txt  Pasted--Intervention-Slow-network-is-detected-See-URL-for-more-details-Fallback-font-will-be-used-whil-1762419526739_1762419526741.txt  Pasted--PRODUCTION-QUALITY-GRANULATION--1769920394838_1769920394839.txt  Pasted--from-sqlalchemy-orm-import-Session-from-database-import-SessionLocal-engine-import-models-def-see-1761303212700_1761303212702.txt  Pasted--nbsp-Add-Precleaning-bin-module-to-the-existing-application-Bin-Entity-Fields-id-1761224609712_1761224609713.txt  Pasted--root-Primary-color-primary-2563eb-color-on-primary-ffffff-color-primary-1759592799214_1759592799214.txt  Pasted-2026-01-28-10-57-04-83-message-Network-Error-stack-Axio_1769578071712.txt  (+20 more)
backend/: add_4_suppliers.py  alembic.ini  auth.py  check_database.py  (+34 more)
(+151 files in other folders)
